# ircbot

./: .gitignore  Cargo.toml  README.md  acg.py  api.py  client.py  command.py  common.py  config.sample.py  eval.py  handy.py  lang.py  main.py  output.py  simple.py  tool.py  toxclient.py  toxmain.py
data/: config.sample.yaml
data/irc/: irc.sample.yaml
data/matrix/: matrix.sample.yaml
docker/: Dockerfile
modules/: __init__.py  timeoutdict.py
modules/admin/: __init__.py  bot.py
modules/commands/: __init__.py  acg.py  api.py  blug.py  common.py  handy.py  ime.py  lang.py  multiline.py  simple.py  tool.py  util.py
python/: client.py  config.sample.py  main.py  toxclient.py  toxmain.py
python/docker/: Dockerfile
python/modules/: timeoutdict.py
python/modules/admin/: bot.py
python/modules/commands/: __init__.py  acg.py  api.py  arch.py  handy.py  multiline.py  simple.py  tool.py  util.py
src/: lib.rs
src/base/: command.pest  command.rs  context.rs  message.rs  mod.rs
src/client/: irc.pest  irc.rs  matrix.pest  matrix.rs  mod.rs
src/command/: api.rs  config.rs  input.rs  language.rs  mod.rs  music.rs  random.rs  scheme.rs  utility.rs
