[package]
name = "ircbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.20"
cbc = "0.1"
chrono = "0.4"
futures = { version = "0.3", default-features = false }
#futures-channel = { version = "0.3", default-features = false }
fuzzy-matcher = "0.3"
#irc = "0.15"
irc = { git = "https://github.com/aatxe/irc", branch = "develop", default-features = false, features = [
    "ctcp",
    "tls-native",
    "yaml_config",
] }
matrix-sdk = "0.6"
mime = "0.3"
num-bigint-dig = "0.8"
pest = "2.5"
pest_derive = "2.5"
rand = "0.8"
regex = "1.7"
reqwest = { version = "0.11", features = ["cookies", "json"] }
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
wana_kana = "2.1"

#[profile.release]
#lto = false
